--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,24 @@
 version: '2'
 services:
-  BANZAIpipelineE2EData:
-    image: docker.lco.global/banzai-e2e-data:1.0.1
-    entrypoint:
-    - /bin/true
-    labels:
-      io.rancher.container.pull_image: always
-      io.rancher.container.start_once: 'true'
-    volumes:
-    - banzaie2e:/archive
-    logging:
-      options:
-        max-size: '100m'
-        max-file: '3'
-  AstrometryCatalogs:
-    image: docker.lco.global/astrometry.net-catalogs:1.0.0
-    entrypoint:
-    - /bin/true
-    labels:
-      io.rancher.container.pull_image: always
-      io.rancher.container.start_once: 'true'
-    volumes:
-    - astrometry:/opt/astrometry.net/data
-    logging:
-      options:
-        max-size: '100m'
-        max-file: '3'
-  BANZAITest:
-    image: ${DOCKER_IMG}
-    entrypoint:
-    - tail
-    command: ["-f", "/dev/null"]
+  banzai_test:
+    build: .
+    image: banzai:test
+    network_mode: bridge
+    depends_on:
+      - broker
+  worker:
+    build: .
+    image: banzai:test
+    network_mode: bridge
+    command: ["celery", "worker", "--app=worker.worker.app", "--concurrency=2", "--hostname=worker@%h", "--loglevel=INFO"]
+    depends_on:
+      - broker
+  broker:
+    image: rabbitmq:3-management
+    network_mode: bridge
     environment:
-      DB_ADDRESS: sqlite:////archive/engineering/test.db
-    volumes_from:
-    - BANZAIpipelineE2EData
-    - AstrometryCatalogs
-    labels:
-      io.rancher.container.pull_image: always
-      io.rancher.sidekicks: BANZAIpipelineE2EData,AstrometryCatalogs
-    logging:
-      options:
-        max-size: '100m'
-        max-file: '3'
-volumes:
-  banzaie2e:
-    driver: local
-  astrometry:
-    driver: local
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
+    ports:
+      - "5672:5672"
+      - "15672:15672"
