--- a/setup.cfg
+++ b/setup.cfg
@@ -65,8 +65,8 @@ install_requires =
     elasticsearch>=5.0.0,<6.0.0
     pytest>=3.6,<4.0
     pyyaml
-    psycopg2-binary
-    dramatiq[redis, watch]
+    psycopg2
+    dramatiq[redis,watch]
     # astrometry.net>=0.72
 tests_require =
     pytest>=3.6,<4.0
