Added redis_host environment variable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,5 @@ services:
     volumes:
       - /archive:/archive
       - /home/mturner/scratch:/scratch
-
+    environment:
+      - REDIS_HOST=redis
